<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_flowtext"
        android:icon="@drawable/flowtext"
        android:title="@string/title_flowtext" />

    <item
        android:id="@+id/navigation_canvas"
        android:icon="@drawable/canvas"
        android:title="@string/title_canvas" />

    <item
        android:id="@+id/navigation_grid"
        android:icon="@drawable/grid"
        android:title="@string/title_grid"/>

    <item
        android:id="@+id/navigation_books"
        android:icon="@drawable/books"
        android:title="@string/title_books" />

</menu>
